<?xml version="1.0"?>
<package format="3">
  <name>arm_zivid</name>
  <version>0.0.0</version>
  <description>The arm_zivid package</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>
  <maintainer email="houhd@umich.edu">houhd</maintainer>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ros2_numpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv_python</depend>
  <depend>h5py</depend>
  <depend>zarr</depend>

  <exec_depend>message_runtime</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
